# piscine-python

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
.devcontainer/: kickstart-env.sh
piscince/00-data-engineer/: .gitignore  Makefile  README.md  docker-compose.yml  gen_env.sh
piscince/00-data-engineer/ex02/: create_table.sh  create_tables.sql  table.sh
piscince/00-data-engineer/ex03/: automatic_table.sh
piscince/00-data-engineer/ex04/: itmes_table.sh
piscine_data_science/00-data-engineer/: Makefile  README.md  docker-compose.yml  download_data.sh  gen_env.sh
piscine_data_science/00-data-engineer/ex02/: table.sh
piscine_data_science/00-data-engineer/ex03/: automatic_table.sh
piscine_data_science/00-data-engineer/ex04/: itmes_table.sh
piscine_data_science/01-data-warehouse/: Makefile  download_data.sh
piscine_data_science/01-data-warehouse/ex01/: customers_table.sh
piscine_data_science/01-data-warehouse/ex02/: remove_duplicates.sh
piscine_django/01-initiation/ex00/: myawesomescript.sh
python_for_data_science/00-starting/ex01/: format_ft_time.py
python_for_data_science/00-starting/ex05/: building.py
python_for_data_science/00-starting/ex06/: filterstring.py
python_for_data_science/00-starting/ex09/ft_package/: pyproject.toml
python_for_data_science/00-starting/ex09/ft_package/ft_package/: __init__.py
python_for_data_science/01-array/: requirments.txt
python_for_data_science/01-array/ex05/: load_image.py  tester.py
python_for_data_science/02-dataTable/ex00/: tester.py
python_for_data_science/03-OOP/ex00/: tester.py
(+66 files in other folders)
