[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ft_package"
version = "0.0.1"
authors = [
  { name="Nicholas Zivkovic", email="znichola@student.42lausanne.ch" },
]
description = "a pip-installable counting package"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["count", "42", "42Lausanne"]

[project.urls]
Homepage = "https://github.com/znichola/piscine-python"
Issues = "https://github.com/znichola/piscine-python/issues"
